# ax-chain-link

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  ELI5.md  README.md
.chainlink/: hook-config.json  issues.db  session.json
.chainlink/integrations/: context-provider.py
.chainlink/rules/: elixir-phoenix.md  elixir.md
.claude/: settings.json
.claude/hooks/: post-edit-check.py  prompt-guard.py  work-check.py
.github/workflows/: ci.yml
chainlink/: Cargo.toml  build.rs
chainlink/.chainlink/: issues.db
chainlink/.claude/: settings.json
chainlink/.claude/hooks/: prompt-guard.py
chainlink/resources/claude/: settings.json
chainlink/src/: daemon.rs  db.rs  identity.rs  lock_check.rs  locks.rs  main.rs  models.rs  sync.rs
chainlink/src/commands/: archive.rs  comment.rs  cpitd.rs  create.rs  delete.rs  deps.rs  export.rs  import.rs  init.rs  label.rs  list.rs  locks_cmd.rs  milestone.rs  mod.rs  next.rs  relate.rs  search.rs  session.rs  show.rs  status.rs  timer.rs  tree.rs  update.rs  usage.rs
chainlink/src/db/: comments.rs  mod.rs  relations.rs  sessions.rs  tests.rs  token_usage_db.rs
chainlink/tests/: cli_integration.rs
chainlink/tests/smoke/: cli_data.rs  harness.rs  lifecycle.rs  mod.rs
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
