[package]
name = "chainlink"
version = "0.1.0"
edition = "2021"
description = "A simple, lean issue tracker CLI"

[lib]
name = "chainlink"
path = "src/lib.rs"

[[bin]]
name = "chainlink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
